...
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIngredientsTitle"
                    style="@style/TextAppearance.AppCompat.Title.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    tools:text="2 Ingredients" />

                <TextView
                    android:id="@+id/tvIngredients"
                    style="@style/TextAppearance.AppCompat.Subhead.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:lineSpacingExtra="4dp"
                    tools:text="- First Ingredient \n- Second Ingredient" />
...
